# pocket-agent-cli

./: .gitignore  DEPLOY_MAHTI.md  Dockerfile.cuda  IMPLEMENTATION_PLAN.md  README.md  docker-compose.cuda.yml  main.py  pocket-agent.lprof  pyproject.toml  requirements-cuda.txt  run_benchmarks.sh
.matplotlib_cache/: fontlist-v390.json
.mpl_config/: fontlist-v390.json
analysis_scripts/: __init__.py  aggregator.py  analyze_m2max_results.py  benchmark_loader.py  bootstrap_stats.py  compute_aggregates.py  compute_headline_cis.py  data_provider.py  export_problem_metrics.py  generate_paper_figures.py  generate_paper_tables.py  humaneval_analysis.py  metrics.py  run_analysis.py  run_finder.py  run_info.py  session_summary.py  telemetry_loader.py
benchmark_analysis/: README.md  config.yaml  fetch_from_mahti.sh  pyproject.toml  requirements.txt  run_analysis.sh
benchmark_analysis/reports/: benchmark_report.md  comprehensive_analysis.md  comprehensive_results.json  deep_analysis_report.txt  deep_analysis_report_metrics.csv  thinking_analysis.json  ultra_detailed_report.md
benchmark_analysis/reports/csv/: model_statistics.csv  pass_at_k_detailed.csv
benchmark_analysis/reports/latex/: model_performance.tex  pass_at_k.tex
benchmark_analysis/reports/tables/: pass_at_k_summary.csv  performance_summary.csv  resource_summary.csv  statistical_tests.csv
benchmark_analysis/scripts/: analyze_benchmarks.py  comprehensive_analysis.py  deep_analysis.py  generate_report.py  organize_benchmark_data.py  process_benchmark_data.py  ultra_detailed_report.py
data/: bfcl_data.json  bfcl_sample.json
pocket_agent_cli/: __init__.py  cli.py  config.py
research/: main.bib  paper.tex
research/figs/: new
scripts/: all_benchmarks_batch.sh  bfcl_gemma3n_batch.sh  bfcl_gemma4_batch.sh  bfcl_qwen35_batch.sh  causal_analysis.py  check_mahti_results.sh  collect_m2max_runs.py  cost_model.py  e2e_engine_test.py  exp3_ablations.py  exp3_replay.py  generate_figures.py  mac_m2max_round_robin_bench.sh  mbpp_qwen34b_vllm_batch.sh  mlx_gemma3n_server.py  model_validation_results.json  online_placement.py  placement_policy.py  plot_threshold_sensitivity.py  radio_tail_deep_analysis.py  run_3arch_experiment.py  run_bandwidth_experiment.py  run_benchmarks.py  run_benchmarks_sglang.py  run_bfcl_benchmark.py  run_compression_experiment.py  run_early_exit_experiment.py  run_mlx_sweep.py  run_websearch_benchmark.py  test_online_placement.py  traffic_characterization.py  validate_all_models.py  validate_websearch_models.py  ws_bench_monitor.sh  ws_benchmark_batch.sh  ws_llama32_batch.sh  ws_qwen06b_batch.sh
slurm/: QUICK_START.md  activate_env.sh  check_cuda.sh  clean_cache.sh  diagnose_cuda.sh  download_models.sh  fix_cuda.sh  pocket_agent_direct.py  rebuild_llama.sh  run_benchmark.sh  run_benchmark_batch.sh  run_benchmark_safe.sh  setup_environment.sh  setup_mahti.sh  submit_all_humaneval.sh  submit_benchmark.sh  submit_humaneval_parallel.sh  test_gpu.sh  test_installation.sh  verify_setup.sh
tests/: conftest.py  test_benchmark_humaneval.py  test_benchmark_service.py  test_bfcl.py  test_cli.py  test_config.py  test_datasets.py  test_datasets_smoke.py  test_energy_monitoring.py  test_gpu_inference.py  test_gsm8k.py  test_hotpotqa.py  (+8 more)
(+84 files in other folders)
