[project]
name = "pocket-agent-cli"
version = "0.1.0"
description = "A CLI tool for local LLM inference and benchmarking with comprehensive performance monitoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-cpp-python>=0.2.90",
    "click>=8.1.7",
    "rich>=13.7.1",
    "httpx>=0.27.0",
    "psutil>=6.0.0",
    "docker>=7.1.0",
    "jinja2>=3.1.4",
    "pydantic>=2.8.2",
    "tqdm>=4.66.5",
    "aiofiles>=24.1.0",
    "huggingface-hub>=0.24.5",
]

[project.scripts]
pocket-agent = "pocket_agent_cli.cli:main"
