[project]
name = "pocket-agent-cli"
version = "0.1.0"
description = "A CLI tool for local LLM inference and benchmarking with comprehensive performance monitoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-cpp-python",  # Version will be latest available
    "click",
    "rich",
    "httpx",
    "psutil",
    "docker",
    "jinja2",
    "pydantic",
    "tqdm",
    "aiofiles",
    "huggingface-hub",
    "line-profiler",
]

[project.scripts]
pocket-agent = "pocket_agent_cli.cli:main"
