[project]
name = "pocket-agent-cli"
version = "0.1.0"
description = "A CLI tool for local LLM inference and benchmarking with comprehensive performance monitoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-cpp-python",  # Version will be latest available
    "click",
    "rich",
    "httpx",
    "psutil",
    "docker",
    "jinja2",
    "pydantic",
    "tqdm",
    "aiofiles",
    "huggingface-hub",
    "line-profiler",
    "torch",
    "torchvision",
    "torchaudio",
    "matplotlib",
    "pandas",
    "seaborn",
]

[project.optional-dependencies]
mlx = [
    "mlx-lm>=0.31",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[project.scripts]
pocket-agent = "pocket_agent_cli.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["pocket_agent_cli"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.setuptools.packages.find]
include = ["pocket_agent_cli*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
